Empty portfolio error fixed
